# nicknames-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
src/: CMakeLists.txt  lib.cpp  lib.h
tests/: CMakeLists.txt  test_version.cpp
